<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="right|center_vertical"
        android:maxLength="16"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/button_textSize"
        android:typeface="serif"
        android:background="@color/transparentColor"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtScreen"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/LinearLayout_layout_height"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/n_7"
                android:textSize="@dimen/button_textSize" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/n_8"
                android:textSize="@dimen/button_textSize" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/n_9"
                android:textSize="@dimen/button_textSize" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="/"
                android:textSize="@dimen/button_textSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/LinearLayout_layout_height"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/n_4"
                android:textSize="@dimen/button_textSize" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/n_5"
                android:textSize="@dimen/button_textSize" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/n_6"
                android:textSize="@dimen/button_textSize" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="*"
                android:textSize="@dimen/button_textSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/LinearLayout_layout_height"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/n_1"
                android:textSize="@dimen/button_textSize" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/n_2"
                android:textSize="@dimen/button_textSize" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/n_3"
                android:textSize="@dimen/button_textSize" />

            <Button
                android:id="@+id/btnSubtract"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="-"
                android:textSize="@dimen/button_textSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/LinearLayout_layout_height"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnDot"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="."
                android:textSize="@dimen/button_textSize" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/n_0"
                android:textSize="@dimen/button_textSize" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="C"
                android:textSize="@dimen/button_textSize" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="@dimen/button_layout_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="+"
                android:textSize="@dimen/button_textSize" />
        </LinearLayout>

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_layout_width"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="="
            android:textSize="@dimen/button_textSize" />
    </LinearLayout>

</RelativeLayout>